--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,9 @@
 [project]
 name = "flux-tools"
-description = "Flux generation tools."
+description = "Flux generation tools. Allow easy computation of Flux generation resolutions and upscale needs to automate workflows. Also allow to report generation usage to BFL if licensed."
 version = "1.0.0"
-license = { file = "LICENSE" }
+license-files = ["LICENSE"]
+dependencies = ["requests"]
 
 [project.urls]
 Repository = "https://github.com/iguanesolutions/comfyui-flux-tools"
