--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "ig1-tools"
-description = "Generation tools, mostly about high resolutions generation and automation. Also allow to report Flux generation usage to BFL if licensed."
+description = "Tools to simplify automation of high resolution generation workflows (resolution, aspect ratio, model resolution advisor, hires, upscale). Also allow to report Flux generation usage to BFL if licensed."
 version = "3.0.0"
 license = { text = "MIT License" }
 dependencies = ["requests"]
