--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -5,8 +5,8 @@ on:
     branches:
       - main
       - master
-    paths:
-      - "pyproject.toml"
+    # paths:
+    #   - "pyproject.toml"
     # tags:
     #   - "v*"
 
