--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -2,13 +2,8 @@ name: Publish to Comfy registry
 on:
   workflow_dispatch:
   push:
-    branches:
-      - main
-      - master
-    # paths:
-    #   - "pyproject.toml"
-    # tags:
-    #   - "v*"
+    tags:
+      - "v*"
 
 permissions:
   issues: write
